--- a/Mannequin Horror Jam/Assembly-CSharp.csproj
+++ b/Mannequin Horror Jam/Assembly-CSharp.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Assets\Quixel\Scripts\BridgeImporter\MegascansMatertialUtils.cs" />
     <Compile Include="Assets\StarterAssets\ThirdPersonController\Scripts\ThirdPersonController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
+    <Compile Include="Assets\Game Assets\Decrative Stuff\Rain\Prefab\Lightning.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
